# os_2018

./: CMakeLists.txt  README  README.md  address_translator.h  demo_itimer.c  demo_jmp.c  main_testing.c  test1.cpp  test5fixed.cpp  uthread.cpp  uthread.h  uthreads.cpp  uthreads.h
ex2/: README  demo_jmp.c  uthreads.cpp
ex2/tests/: main_testing.c  test1.cpp  test132.cpp  test14.cpp  test1430.cpp  test2.cpp  test42.cpp  test429.cpp  test5.cpp  test5fixed.cpp
ex3/: Makefile  MapReduceClient.h  MapReduceFramework.cpp  README  bigClient.cpp  eurovisionClient.cpp  littleClient.cpp
ex3/atomicdemo/: Makefile  atomicdemo.cpp
ex3/tests/: SampleClient.cpp  test_2.cpp
ex4/: Makefile  README  test.cpp  whatsappClient.cpp  whatsappClient.h  whatsappCommon.h  whatsappServer.cpp  whatsappServer.h  whatsappio.cpp  whatsappio.h
ex5/: MemoryConstants.h  PhysicalMemory.cpp  SimpleTest.cpp  VirtualMemory.cpp
keren/: Makefile  README  uthreads.cpp
